Fixed css bug with the pre vs preline spacing of the lines in the form

--- a/src/components/Consent/Consent.css
+++ b/src/components/Consent/Consent.css
@@ -6,3 +6,71 @@
     padding-left: 15px !important;
 
 }
+
+
+.consent-form-container {
+    background-color: white;
+    margin: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 20px 40px 50px 40px;
+    position: relative;
+    overflow: hidden;
+    transition: margin-left .5s;
+    width: 11.5in;
+    /*height: 11in;*/
+    clear: both;
+    page-break-after: always;
+}
+
+
+.uhn-consent-logo {
+    width: 240px
+}
+
+.ehi-consent-logo {
+    width: 180px
+}
+
+.consent-form-title {
+    padding: 70px 0 10px 0;
+    font-size: 1em;
+    font-weight: 700;
+    text-align: center;
+}
+
+.text-container {
+    padding: 30px 30px 0px 30px;
+}
+
+.singleline-container {
+    display: flex;
+    flex-direction: row;
+    white-space: pre-line;
+}
+
+.singleline-heading {
+    flex: 1;
+    font-weight: 600;
+    padding-right: 20px;
+}
+
+.singleline-text {
+    flex: 3;
+
+}
+
+.multiline-container {
+    /*display: flex;*/
+    white-space: pre-line;
+}
+
+.multiline-heading {
+    font-weight: 600;
+}
+
+.multiline-text {
+}
+
+p {
+    text-align: left;
+}
